--- a/style.css
+++ b/style.css
@@ -1,8 +1,37 @@
+@font-face {
+    font-family: "Myriad-Pro-Regular";
+    src: url(./assets/fonts/MYRIADPRO-REGULAR.woff);
+}
+body{
+    font-family: "Myriad-Pro-Regular";
+}
+
+#divNav1{
+    justify-content: center;
+}
+
 #logo {
     display : flex;
     align-items: center;
     justify-content: center;
 }
-h1 {
+
+.titre-logo {
     color: red;
+    text-shadow: 1px 1px 0px black,
+                -1px -1px 0px black,
+                1px -1px 0px black,
+                -1px 1px 0px black,
+                1px 0px 0px black,
+                -1px 0px 0px black,
+                0px 1px 0px black,
+                0px -1px 0px black,
+                3px 1px 0px red;
+    font-size: 3rem;   
+    transform: scaleY(1.3); 
+}
+
+#logo-man{
+    max-width: 70px;
+    max-height: 70px;
 }
