--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
 
 #divNav1{
     justify-content: center;
+    align-items: center;
     margin-left: 37.5vw;
 }
 
@@ -32,21 +33,63 @@ body{
     transform: scaleY(1.3); 
 }
 
+@media (max-width: 992px){
+    .titre-logo{
+        font-size: 3rem;
+    }
+    #compte{
+        font-size: 1.0rem;
+    }
+    
+}
+@media (max-width: 768px){
+    .titre-logo{
+        font-size: 2rem;
+    }
+    #compte{
+        font-size: 0.5rem;
+    }
+}
+@media (max-width: 576px){
+    .titre-logo{
+        font-size: 2rem;
+    }
+    #compte{
+        font-size: 0.1rem;
+    }
+    #divNav1{
+        margin-left: 30vw;
+    }
+}
+
+#logo-esig{
+    max-width: 7vw;
+    max-height: 7vw;
+}
+
 #logo-man{
-    max-width: 70px;
-    max-height: 70px;
+    /* max-width: 70px; */
+    /* max-height: 70px; */
+    max-width: 6.2vw;
+    max-height: 6.2vw;
 }
 .img-connexion {
-    width: 45px;
-    height: 45px;
+    /* width: 45px; */
+    /* height: 45px; */
+    width: 3.5vw;
+    height: 3.5vw;
     border: 2px solid black;
     border-radius: 50px;
     padding: 2px;
     background: rgba(232, 229, 229, 0.492);
 }
 #compte-div{
-    margin-right: 2vh;
+    margin-right: 3vw;
 }
 #compte{
     font-size: 1.0rem;
 }
+h2{
+    font-size: 2.5rem;
+}
+
