--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ body{
 #divNav1{
     justify-content: center;
     align-items: center;
-    margin-left: 37.5vw;
+    margin-left: 39vw;
+}
+.margin-debut{
+    margin-top: 3vh;
+    margin-bottom: 9vh;
 }
 
 #logo {
@@ -76,8 +80,8 @@ body{
 .img-connexion {
     /* width: 45px; */
     /* height: 45px; */
-    width: 3.5vw;
-    height: 3.5vw;
+    width: 3vw;
+    height: 3vw;
     border: 2px solid black;
     border-radius: 50px;
     padding: 2px;
@@ -93,3 +97,50 @@ h2{
     font-size: 2.5rem;
 }
 
+.ombre-bleue{
+    color: rgb(2, 2, 104);
+    text-shadow: 1px 1px 0px rgb(0, 110, 255),
+                -1px -1px 0px rgb(0, 110, 255),
+                1px -1px 0px rgb(0, 110, 255),
+                -1px 1px 0px rgb(0, 110, 255),
+                1px 0px 0px rgb(0, 110, 255),
+                -1px 0px 0px rgb(0, 110, 255),
+                0px 1px 0px rgb(0, 110, 255),
+                0px -1px 0px rgb(0, 110, 255),
+                4px 1px 3px rgb(2,2,104);
+    font-size: 3.5rem;
+    transform: scaleY(1.3);
+    text-align: center;
+
+}
+
+.taille-img{
+    width: 40vw;
+    height: 30vw;
+    margin-right: 3vw;
+}
+
+.cellule-texte{
+    width: 35vw;
+    height: 20vw;
+    border: 1px solid rgba(0, 0, 0, 0.288);
+    background: rgba(223, 221, 221, 0.301);
+    border-radius: 3.5vw;
+    box-shadow: 15px 4px 1px rgba(128, 128, 128, 0.267);
+}
+
+p{
+    font-size: 1.8rem;
+    padding-left: 3%;
+    padding-right: 3%;
+    color: rgb(27, 6, 146);
+    text-shadow: 1px 1px 0px rgb(3, 74, 168),
+                -1px -1px 0px rgb(3, 74, 168),
+                1px -1px 0px rgb(3, 74, 168),
+                -1px 1px 0px rgb(3, 74, 168),
+                1px 0px 0px rgb(3, 74, 168),
+                -1px 0px 0px rgb(3, 74, 168),
+                0px 1px 0px rgb(3, 74, 168),
+                0px -1px 0px rgb(3, 74, 168);
+    transform: scaleY(1.1);
+}
