--- a/style.css
+++ b/style.css
@@ -37,34 +37,7 @@ body{
     transform: scaleY(1.3); 
 }
 
-@media (max-width: 992px){
-    .titre-logo{
-        font-size: 3rem;
-    }
-    #compte{
-        font-size: 1.0rem;
-    }
-    
-}
-@media (max-width: 768px){
-    .titre-logo{
-        font-size: 2rem;
-    }
-    #compte{
-        font-size: 0.5rem;
-    }
-}
-@media (max-width: 576px){
-    .titre-logo{
-        font-size: 2rem;
-    }
-    #compte{
-        font-size: 0.1rem;
-    }
-    #divNav1{
-        margin-left: 30vw;
-    }
-}
+
 
 #logo-esig{
     max-width: 7vw;
@@ -117,7 +90,6 @@ h2{
 .taille-img{
     width: 40vw;
     height: 30vw;
-    margin-right: 3vw;
 }
 
 .cellule-texte{
@@ -130,7 +102,7 @@ h2{
 }
 
 p{
-    font-size: 1.8rem;
+    font-size: 1.6vw;
     padding-left: 3%;
     padding-right: 3%;
     color: rgb(27, 6, 146);
@@ -143,4 +115,58 @@ p{
                 0px 1px 0px rgb(3, 74, 168),
                 0px -1px 0px rgb(3, 74, 168);
     transform: scaleY(1.1);
+}
+.superposition-parent{
+    position: relative;
+    display: inline-block;
+}
+
+.superposition-enfant-bg{
+    position: absolute;
+    top: 25%;
+    left: 69%;
+    z-index: 1;
+}
+
+.superposition-enfant{
+    position: relative;
+    z-index: 10;
+}
+
+@media (max-width: 992px){
+    .titre-logo{
+        font-size: 3rem;
+    }
+    #compte{
+        font-size: 1.0rem;
+    }
+    /* p{
+        font-size: 1.8rem;
+    } */
+    
+}
+@media (max-width: 768px){
+    .titre-logo{
+        font-size: 2rem;
+    }
+    #compte{
+        font-size: 0.5rem;
+    }
+    /* p{
+        font-size: 1rem;
+    } */
+}
+@media (max-width: 576px){
+    .titre-logo{
+        font-size: 2rem;
+    }
+    #compte{
+        font-size: 0.1rem;
+    }
+    #divNav1{
+        margin-left: 30vw;
+    }
+    /* p{
+        font-size: 0.5rem;
+    } */
 }
