--- a/style.css
+++ b/style.css
@@ -136,21 +136,20 @@ p{
 
 .superposition-enfant-bg{
     position: absolute;
-    top: 25%;
-    left: 65%;
     z-index: 1;
     /* border: 1px solid red; */
 
 }
-.superposition-enfant-bg-2{
-    position: absolute;
+#design-special-debut{
+    top: 25%;
+    left: 65%;
+}
+
+#chaussure-debut{
     top: 135%;
     left: 35%;
-    z-index: 1;
     max-width: 20vw;
     max-height: 20vw;
-    /* border: 1px solid yellow; */
-
 }
 
 .superposition-enfant{
@@ -214,4 +213,40 @@ p{
     margin-left: 1.1vw;
     margin-bottom: 3vw;
     margin-top: 2vw;
+}
+
+#design-special-milieu{
+    top: 120%;
+    left: 2%;
+    transform: scaleX(-1);
+}
+#etoile{
+    width: 95vw;
+    height: 90vw;
+    top: 80%;
+    left: 1%;
+}
+#chaussure-milieu-1{
+    top: 195%;
+    left: 70%;
+    z-index: 4;
+}
+
+#traces-de-pas-milieu{
+    transform: scaleX(-0.9) rotate(-20deg);
+    top: 230%;
+    left: 78%;
+    z-index: 4;
+    /* width: 20%;
+    height: 23%; */
+}
+
+#chaussure-milieu-2{
+    top: 270%;
+    left: 110%;
+    z-index: 4;
+}
+
+#section-entrainements{
+    margin-top: 85vw;
 }
