--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ h2{
     box-shadow: 15px 4px 1px rgba(128, 128, 128, 0.267);
 }
 
-p{
+p,h4{
     font-size: 1.6vw;
     padding-left: 3%;
     padding-right: 3%;
@@ -249,4 +249,20 @@ p{
 
 #section-entrainements{
     margin-top: 85vw;
+}
+.cellule-entrainement{
+    width: 65vw;
+    height: 30vw;
+    padding: 1.5vw;
+}
+h3{
+    font-size: 2.5vw;
+    transform: scaleY(1.3);
+    margin-bottom: 1.5vw;
+}
+h4{
+    margin-bottom: 1.5vw;
+}
+#section-entrainements p{
+    text-align: center;
 }
