--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body{
                 0px 1px 0px black,
                 0px -1px 0px black,
                 3px 1px 0px red;
-    font-size: 3rem;   
+    /* font-size: 3.5rem;    */
+    font-size: 3vw;
     transform: scaleY(1.3); 
 }
 
@@ -68,7 +69,7 @@ body{
     margin-right: 3vw;
 }
 #compte{
-    font-size: 1.0rem;
+    font-size: 0.8vw;
 }
 h2{
     font-size: 3.7vw;
@@ -133,13 +134,22 @@ p,h4{
     display: inline-block;
     /* border: 1px solid blue; */
 }
+.superposition-enfant{
+    position: relative;
+    z-index: 10;
+}
 
+.superposition-enfant-absolute{
+    position: absolute;
+    z-index: 10;
+    /* border: 1px solid red; */
+}
 .superposition-enfant-bg{
     position: absolute;
     z-index: 1;
     /* border: 1px solid red; */
-
 }
+
 #design-special-debut{
     top: 25%;
     left: 65%;
@@ -152,21 +162,19 @@ p,h4{
     max-height: 20vw;
 }
 
-.superposition-enfant{
-    position: relative;
-    z-index: 10;
-}
 
-@media (max-width: 992px){
+
+/* @media (max-width: 992px){
     .titre-logo{
         font-size: 3rem;
     }
     #compte{
         font-size: 1.0rem;
     }
-    /* p{
-        font-size: 1.8rem;
-    } */
+    
+    #divNav1{
+        margin-left: 30vw;
+    }
     
 }
 @media (max-width: 768px){
@@ -176,9 +184,10 @@ p,h4{
     #compte{
         font-size: 0.5rem;
     }
-    /* p{
-        font-size: 1rem;
-    } */
+    #divNav1{
+        margin-left: 20vw;
+    }
+   
 }
 @media (max-width: 576px){
     .titre-logo{
@@ -190,10 +199,8 @@ p,h4{
     #divNav1{
         margin-left: 30vw;
     }
-    /* p{
-        font-size: 0.5rem;
-    } */
-}
+   
+} */
 
 /* #section-debut{
     border : 1px solid green;
@@ -216,6 +223,8 @@ p,h4{
 }
 
 #design-special-milieu{
+    width: 28vw;
+    height: 19.4vw;
     top: 120%;
     left: 2%;
     transform: scaleX(-1);
@@ -227,12 +236,16 @@ p,h4{
     left: 1%;
 }
 #chaussure-milieu-1{
+    width: 10.4vw;
+    height: 6.8vw;
     top: 195%;
     left: 70%;
     z-index: 4;
 }
 
 #traces-de-pas-milieu{
+    width: 19.65vw;
+    height: 12.17vw;
     transform: scaleX(-0.9) rotate(-20deg);
     top: 230%;
     left: 78%;
@@ -242,6 +255,8 @@ p,h4{
 }
 
 #chaussure-milieu-2{
+    width: 13.1vw;
+    height: 7.95vw;
     top: 270%;
     left: 110%;
     z-index: 4;
@@ -265,4 +280,79 @@ h4{
 }
 #section-entrainements p{
     text-align: center;
+}
+#VMA{
+    margin-top: 3vw;
+}
+
+#piste-athletisme{
+    width: 95vw;
+    height: 90vw;
+    top: 50%;
+}
+#traces-de-pas-fin{
+    width: 19.65vw;
+    height: 12.17vw;
+    top: 88%;
+    left: 55%;
+    transform: scaleX(0.9) rotate(-10deg);
+}
+#Fartlek{
+    top: 110%;
+}
+#aisance{
+    top: 210%;
+}
+#traces-de-pas-fin-2{
+    width: 19.65vw;
+    height: 12.17vw;
+    top: 291%;
+    left: -15%;
+    transform: scaleX(-0.9) rotate(-10deg);
+}
+#traces-de-pas-fin-3{
+    margin-top: 4vw;
+    width: 19.65vw;
+    height: 12.17vw;
+    transform: scaleX(0.9) rotate(-50deg);
+}
+#actif{
+    top: 311%;
+}
+
+#fin{
+    margin-top: 100vw;
+}
+#img-fleche{
+    width: 2vw;
+    height: 3vw;
+    transform: rotate(-90deg);
+}
+
+#damier{
+    margin-top: 5vw;
+}
+
+.carre-noir{
+    width: 9vw;
+    height: 9vw;
+    border: 1px solid black;
+    background: black;
+}
+
+.margin-carre-haut{
+    margin-left: 9vw;
+}
+
+#texte-fin{
+    margin-top: 8vw;
+    text-align: center;
+}
+.bouton-top{
+    width: 5vw;
+    height: 5vw;
+}
+.position-btn-top{
+    top: 770%;
+    left: 90%;
 }
