--- a/style.css
+++ b/style.css
@@ -273,9 +273,11 @@ p,h4{
 h3{
     font-size: 2.5vw;
     transform: scaleY(1.3);
+}
+.margin-entrainements-h3{
     margin-bottom: 1.5vw;
 }
-h4{
+.margin-entrainements-h4{
     margin-bottom: 1.5vw;
 }
 #section-entrainements p{
@@ -416,8 +418,18 @@ h4{
 #entrainements-a-venir{
     background: lightgray;
     border: 1px solid black;
+    margin: 0;
 }
 #btn-rouge{
     background: red;
     border: 1px solid black;
+}
+#div-training{
+    border: 1px solid black;
+    background: rgb(219, 217, 217);
+    /* max-width: 80vw; */
+}
+.relief-training{
+    background: gray;
+    border: 1px solid lightgray;
 }
