--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ h2{
     box-shadow: 15px 4px 1px rgba(128, 128, 128, 0.267);
 }
 
-p,.style-categorie{
+p,h4{
     font-size: 1.6vw;
     padding-left: 3%;
     padding-right: 3%;
@@ -414,7 +414,6 @@ h3{
 }
 #tab-bord{
     margin-top: 5vw;
-    margin-bottom: 3vw;
 }
 #entrainements-a-venir{
     background: rgba(204, 204, 204, 0.36);
@@ -436,7 +435,7 @@ h3{
     padding-bottom: 2.5vw;
     padding-right: 0;
     border-radius: 0 0vw 0vw 2vw;
-    max-height: 24vw;
+    max-height: 21vw;
     overflow-y: scroll;
     /* scrollbar-color: rgba(230,230,230) white; */
     /* max-width: 80vw; */
@@ -457,7 +456,7 @@ h3{
 }
 #div-vide{
     width: 2vw;
-    height:24vw;
+    height:21vw;
     background: rgba(204, 204, 204, 0.36);
     border-top: 1px solid black;
     border-bottom: 1px solid black;
@@ -465,38 +464,14 @@ h3{
     border-radius: 0vw 3vw 3vw 0vw;
     padding: 0;
 }
-#div-training h5{
-    margin-left: 1vw;
-}
 .relief-training{
     background: rgba(230,230,230);
-    border: 2px solid white;
-    box-shadow: inset 0px 1px 2px black;
+    border: 1px solid lightgray;
     border-radius: 1vw;
     padding-top: 0.8vw;
     padding-bottom: 0.8vw;
 }
 h5{
     color: rgb(2, 2, 104);
-}
-#horloge{
-    width: 2.3vw;
-    height: 2.3vw;
-    border-radius: 1vw;
-}
-#btn-horloge{
-    margin-left: 14vw;
-    border: 0;
-    border-radius: 1vw;
-}
-#horloge:hover{
-    width: 2.65vw;
-    height: 2.65vw;
-}
-#inscriptions{
-    margin-top: 5vw;
-}
-#div-titre-inscription{
-    border-radius: 5vw;
-    background: rgba(230,230,230);
+
 }
