--- a/style.css
+++ b/style.css
@@ -562,6 +562,12 @@ h5{
     padding: 3%;
     border :0;
 }
+.taillemax{
+    max-height: 35vw;
+}
+.div-participant{
+    background: rgba(230,230,230);
+}
 .btn-inscription-training:hover{
     background: rgba(204,204,204);
 }
