Création de la page membre

--- a/style.css
+++ b/style.css
@@ -500,6 +500,13 @@ h5{
     height: 60vw;
     justify-self: center;
 }
+#inscriptions{
+    margin-top: 15vw;
+    margin-bottom: 15vw;
+    border-radius: 6vw;
+    height: 60vw;
+    justify-self: center;
+}
 #inscription h2,h3,h4,select,input{
     color: rgb(2, 2, 104);
 }
@@ -587,6 +594,9 @@ h5{
     height: 1px;
 }
 #ajoutEntrainement{
+    background: rgba(204,204,204,0.36);
+}
+#inscriptions{
     background: rgba(204,204,204,0.36);
 }
 #div-tri{
