--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 body{
     font-family: "Myriad-Pro-Regular";
-    max-width: 100vw;
-    margin: 0;
+    /* max-width: 100; */
+    /* margin: 0; */
     overflow-x: hidden;
 }
 
